web/app/src/assets/base.css
/* ... */
.col-1 {
  grid-area: col-1;
}

.col-2 {
  grid-area: col-2;
}

.col-3 {
  grid-area: col-3;
}

.app-version {
  font-family: var(--font-family-mono);
  font-size: var(--font-size-sm);
}

a {
  color: currentColor;
  text-decoration: none;
}

a:hover {
  color: var(--color-accent);
  text-decoration: underline;
}

a.router-link-active {
  color: var(--color-accent);
}

header {
  align-items: center;
  color: var(--color-text-muted);
  display: flex;
  padding: 0 var(--spacer-sm);
}

header.mainmenu {
  grid-area: header-L;
}
header.farmstatus {
  grid-area: header-M;
  margin-left: auto;
  margin-right: auto;
}
@media (max-width: 1280px) {
  header.farmstatus {
    grid-area: header-L;
    margin-right: 0;
  }
}
@media (max-width: 1070px) {
  header.farmstatus {
    /* No more space to show it in the header. */
    display: none;
  }
}
body.is-two-columns header.farmstatus {
  grid-area: header-L;
  margin-right: 0;
}
header.links {
  grid-area: header-R;
}

header nav {
  margin-right: auto;
}

.navbar-brand {
  margin-right: var(--spacer);
}

nav > ul {
  align-items: center;
  display: flex;
  list-style-type: none;
  margin: 0;
  padding: 0;
}

nav > ul > li > a {
  display: block;
  padding: var(--spacer-xs) var(--spacer-sm);
}

h2.column-title {
  border-bottom: var(--border-width) solid var(--color-border);
  color: var(--color-text-hint);
  font-size: var(--font-size-base);
  margin: 0;
  padding-bottom: var(--spacer-sm);
}

h3.sub-title {
  border-bottom: var(--border-width) solid var(--color-border);
  color: var(--color-text-hint);
  font-size: var(--font-size-base);
  margin: var(--spacer) 0 0;
  padding: 0 0 var(--spacer-sm);
}

dl {
  display: grid;
  font-family: var(--font-family-mono);
  font-size: var(--font-size-sm);
  grid-template-columns: max-content auto;
}

dl dt {
  font-weight: bold;
  text-align: right;
  width: 100px;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

dl dd {
  margin-bottom: .133rem;
  margin-left: var(--spacer-sm);
  padding-bottom: .133rem;
  transition: color var(--transition-speed-fast) ease-out;
  word-break: break-word;
}

dl dd:hover {
  color: var(--color-text-highlight);
}

dl dd:empty {
  border-color: transparent;
}

.dl-no-data {
  color: var(--color-text-hint);
  font-family: var(--font-family-mono);
  font-size: var(--font-size-sm);
  padding: var(--spacer-lg) var(--spacer);
  text-align: center;
  cursor: default;
}

.app-footer {
  align-items: center;
  background-color: var(--color-background-column);
  border-radius: var(--border-radius);
  color: var(--color-text-muted);
  cursor: pointer;
  display: flex;
  font-size: var(--font-size-sm);
  grid-area: footer;
  padding: var(--spacer-sm);
  transition: background-color var(--transition-speed) ease-in-out;
}

.app-footer:hover {
  background-color: var(--color-background-column-highlight);
}

.app-footer:hover .app-footer-expand {
  margin-top: -5px;
}

.app-footer-expand {
  position: relative;
  stroke: var(--color-text-hint);
  transform: scale(.8);
  transition: stroke var(--transition-speed) ease-in-out, margin-top var(--transition-speed) ease-in-out;
}

.btn-bar {
  align-items: center;
  display: flex;
  padding: var(--spacer-sm) 0;
}

.btn-bar .align-right,
.btn-bar-group .align-right {
  margin-left: auto;
}

.btn-bar .align-center,
.btn-bar-group .align-center {
  margin-left: auto;
  margin-right: auto;
}

.btn-bar-group {
  align-items: center;
  display: flex;
  padding: var(--spacer-sm) 0;
}

.btn-bar-group .btn-bar {
  padding: 0;
}

.btn-bar-group select+.btn,
.btn-bar-group select+button,
.btn-bar-group .btn+select,
.btn-bar-group button+select {
  margin-left: var(--spacer-sm)
}

label {
  display: block;
}

fieldset {
  background-color: var(--color-background-column-highlight);
  border: none;
  margin-bottom: var(--spacer);
  border-radius: var(--border-radius);
}

input[type="text"],
input[type="number"] {
  appearance: none;
  background-color: var(--color-background);
  border-radius: var(--border-radius);
  border: var(--border-width) solid var(--border-color);
  box-sizing: border-box;
  display: block;
  outline: none;
  padding: var(--spacer-sm);
  transition: border-color var(--transition-speed) ease-in-out;
  width: 100%;
}

input[type="text"]:focus,
input[type="number"]:focus {
  border-color: var(--color-accent);
}

input[type="text"].is-invalid,
input[type="number"].is-invalid {
  border-color: var(--color-danger);
}

.input-help-text {
  display: inline-block;
}
.input-help-text, .hint {
  color: var(--color-text-muted);
  font-size: var(--font-size-sm);
  margin: var(--spacer-xs);
}

select {
  background-color: var(--color-button-background);
  border-radius: var(--border-radius);
  border: calc(var(--border-width) / 2) solid var(--color-button-background);
  display: inline-flex;
  font-size: var(--font-size-sm);
  justify-content: center;
  padding: var(--spacer-xs) var(--spacer-sm);
}

button, input[type='button'], .btn {
  align-items: center;
  background-color: var(--color-button-background);
  border-radius: var(--border-radius);
  border: var(--border-width) solid var(--color-button-background);
  color: var(--color-button);
  cursor: pointer;
  display: inline-flex;
  font-size: var(--font-size-sm);
  justify-content: center;
  padding: var(--spacer-xs) var(--spacer-sm);
  touch-action: manipulation;
  transition-duration: var(--transition-speed);
  transition-property: background-color, border-color, color;
  user-select: none;
}

.btn-lg {
  font-size: var(--font-size-base);
}

.btn-bar.btn-bar-wide {
  justify-content: space-between;
  width: 100%;
}

.btn-bar .btn+.btn,
.btn-bar button+button {
  margin-left: var(--spacer-sm);
}

button[disabled],
input[type='button'][disabled],
.btn[disabled] {
  background-color: transparent;
  border-color: var(--color-button-background);
  color: var(--color-text-muted);
  opacity: .5;
  pointer-events: none;
}
/* ... */

